# depdigest

./: .buildinfo  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SMONITOR_GUIDE.md  depdigest.core.html  depdigest.html  depdigest.utils.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: CI.yaml  CI_full_matrix.yaml  install_macos_latest.yaml  install_ubuntu_latest.yaml  sphinx_docs_to_gh_pages.yaml
_modules/: index.html
_modules/depdigest/: cli.html
_sources/: depdigest.core.rst.txt  depdigest.rst.txt  depdigest.utils.rst.txt  index.md.txt  modules.rst.txt
api/: index.html
api/autosummary/: depdigest.DepConfig.html  depdigest.LazyRegistry.html  depdigest.check_dependency.html  depdigest.clear_package_configs.html  depdigest.dep_digest.html  depdigest.get_info.html  depdigest.is_installed.html  depdigest.register_package_config.html  depdigest.resolve_config.html
content/about/: index.html
content/developers/: api-stability.html  architecture.html  index.html  (+9 more)
depdigest/: __init__.py  _smonitor.py  cli.py
dev_guide/: architecture.md  implementation_guide.md  intro.md  roadmap.md  vision.md
devguide/: architecture.md  collective_evidence_pack.md  implementation_guide.md  intro.md  release_0.10.0_stabilization_checklist.md  release_0.9.0_checklist.md  roadmap.md  smonitor.md  vision.md
devtools/: README.md  requirements.yaml  start_dev_env.sh
docs/: Makefile  conf.py  index.md
standards/: DEPDIGEST_GUIDE.md
tests/: test_ast_tools.py  test_cli.py  test_cli_contract.py  test_core.py  test_public_api_contract.py
(+94 files in other folders)
