[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "depdigest"
version = "0.1.0"
description = "Lightweight dependency management and lazy loading for Python libraries."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "UIBCDF Development Team"}
]
dependencies = []

[project.urls]
Homepage = "https://github.com/uibcdf/depdigest"

[tool.setuptools.packages.find]
include = ["depdigest*"]
