[build-system]
requires = ["setuptools>=61.0", "versioningit>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "depdigest"
dynamic = ["version"]
description = "Lightweight dependency management and lazy loading for Python libraries."
readme = "README.md"
requires-python = ">=3.10.0,<3.14.0"
license = {text = "MIT"}
authors = [
    {name = "UIBCDF Development Team"}
]
dependencies = [
    "smonitor",
]

[project.urls]
Homepage = "https://github.com/uibcdf/depdigest"
"Source" = "https://github.com/uibcdf/depdigest/"
"Documentation" = "https://uibcdf.org/depdigest/"

[project.scripts]
depdigest = "depdigest.cli:main"

[tool.setuptools.packages.find]
include = ["depdigest*"]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
# The method key:
method = "git"  # <- The method name
# Parameters to pass to the method:
match = ["*"]
default-tag = "1.0.0"

[tool.versioningit.write]
file = "depdigest/_version.py"
